# project-cplusplus

./: .clang-tidy  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  Jenkinsfile  Jenkinsfile.groovy  JenkinsfileSL.groovy  README.md  cppcheck.xml  renovate.json
.devcontainer/: Dockerfile
.github/workflows/: build-test.yml  docker-build-publish.yml  project-build-test.yml
cmake/: GitProjectVersion.cmake
docs/: Doxyfile
src/: CMakeLists.txt  main.cpp
src/lib/: calculate.cpp  calculate.hpp
tests/: CMakeLists.txt  calculate_test.cpp
tools/: build-cmake-target.sh  build-docs.sh  build-documentation.sh  build-project.sh  build-unit-tests.sh  clang-format.sh  run-test.sh
